chore: format it

--- a/src/App.css
+++ b/src/App.css
@@ -4,52 +4,52 @@
 
 @layer base {
   :root {
-    --background: #FFFFFF;
+    --background: #ffffff;
     --foreground: #212121;
-    --card: #FFFFFF;
+    --card: #ffffff;
     --card-foreground: #212121;
-    --popover: #FFFFFF;
+    --popover: #ffffff;
     --popover-foreground: #212121;
-    --primary: #29335C;
-    --primary-foreground: #FFFFFF;
+    --primary: #29335c;
+    --primary-foreground: #ffffff;
     --secondary: #636363;
-    --secondary-foreground: #FFFFFF;
-    --muted: #E3E3E3;
+    --secondary-foreground: #ffffff;
+    --muted: #e3e3e3;
     --muted-foreground: #757575;
-    --accent: #E3E3E3;
+    --accent: #e3e3e3;
     --accent-foreground: #757575;
-    --destructive: #BC1637;
-    --destructive-foreground: #FFFFFF;
-    --border: #CDCDCD;
-    --input: #CDCDCD;
-    --ring: #29335C;
+    --destructive: #bc1637;
+    --destructive-foreground: #ffffff;
+    --border: #cdcdcd;
+    --input: #cdcdcd;
+    --ring: #29335c;
     --radius: 4px;
-    --chart-1: #57A40F;
-    --chart-2: #5BBFE3;
-    --chart-3: #E5C302;
-    --chart-4: #BC1637;
-    --chart-5: #29335C;
-    --error: #BC1637;
-    --error2: #FEF7F5;
-    --error3: #6D0738;
-    --info: #5BBFE3;
-    --info2: #F2FDFF;
-    --info3: #C8F3FA;
+    --chart-1: #57a40f;
+    --chart-2: #5bbfe3;
+    --chart-3: #e5c302;
+    --chart-4: #bc1637;
+    --chart-5: #29335c;
+    --error: #bc1637;
+    --error2: #fef7f5;
+    --error3: #6d0738;
+    --info: #5bbfe3;
+    --info2: #f2fdff;
+    --info3: #c8f3fa;
     --primary2: #636363;
     --primary3: #898989;
-    --primary4: #CDCDCD;
-    --primary5: #E3E3E3;
-    --primary6: #F8F8F8;
-    --primary6_1: #FCFCFC;
-    --success: #57A40F;
-    --success2: #F9FFE9;
-    --success3: #2F6E06;
+    --primary4: #cdcdcd;
+    --primary5: #e3e3e3;
+    --primary6: #f8f8f8;
+    --primary6_1: #fcfcfc;
+    --success: #57a40f;
+    --success2: #f9ffe9;
+    --success3: #2f6e06;
     --text: #212121;
     --text2: #757575;
-    --text3: #BDBDBD;
-    --warning: #E5C302;
-    --warning2: #FDF9CB;
-    --warning3: #846A00;
+    --text3: #bdbdbd;
+    --warning: #e5c302;
+    --warning2: #fdf9cb;
+    --warning3: #846a00;
     --boxShadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.12);
     --boxShadow2: 2px 2px 4px 0 rgba(0, 0, 0, 0.12);
     --boxShadow3: 4px 4px 8px 0 rgba(0, 0, 0, 0.12);
@@ -57,29 +57,29 @@
 
   .dark {
     --background: #212121;
-    --foreground: #FFFFFF;
+    --foreground: #ffffff;
     --card: #212121;
-    --card-foreground: #FFFFFF;
+    --card-foreground: #ffffff;
     --popover: #212121;
-    --popover-foreground: #FFFFFF;
-    --primary: #FFFFFF;
-    --primary-foreground: #29335C;
+    --popover-foreground: #ffffff;
+    --primary: #ffffff;
+    --primary-foreground: #29335c;
     --secondary: #757575;
-    --secondary-foreground: #FFFFFF;
+    --secondary-foreground: #ffffff;
     --muted: #757575;
-    --muted-foreground: #BDBDBD;
+    --muted-foreground: #bdbdbd;
     --accent: #757575;
-    --accent-foreground: #FFFFFF;
-    --destructive: #6D0738;
-    --destructive-foreground: #FFFFFF;
+    --accent-foreground: #ffffff;
+    --destructive: #6d0738;
+    --destructive-foreground: #ffffff;
     --border: #757575;
     --input: #757575;
-    --ring: #FFFFFF;
-    --chart-1: #2F6E06;
-    --chart-2: #C8F3FA;
-    --chart-3: #846A00;
-    --chart-4: #6D0738;
-    --chart-5: #29335C;
+    --ring: #ffffff;
+    --chart-1: #2f6e06;
+    --chart-2: #c8f3fa;
+    --chart-3: #846a00;
+    --chart-4: #6d0738;
+    --chart-5: #29335c;
   }
 }
 
